--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sample_constraint_layout">
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +8,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sample_constraint_layout">
+        <activity android:name=".MainActivity2"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:label="@string/label2"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
